2005-09-03 Pierrick LE GALL

	* new : template yoga, made by yoDan, helped by chrisaga for
	integration becomes the official template.

2005-09-03 Pierrick LE GALL

	* modification : less configuration parameters in administration
	screen. These parameters are move to
	include/config_default.inc.php.

	* new : ability to add a single picture to caddie from picture.php

	* new : contextual help, only a few pages are available.

	* new : ability to delete users from admin/user_list

	* modification : reorganization of configuration file

	* new : configuration parameter use_exif_mapping

	* improvement : MOD hidemail added to standard

2005-08-26 Pierrick LE GALL

	* new : HTML BODY identifier to let CSS stylesheets manage
	specific behaviour.

	* deletion : admin/search useless

	* improvement : in admin/user_list, special behaviour for
	true/false fields (expand, show_comments)

	* new : gallery_title and gallery_description are displayed at the
	top of each page.

	* improvement : simplification in HTML for categories menu.

	* improvement : standardization of presentation in all public
	pages (identification, registration, search, profile,
	notification, comments, etc.)

2005-08-25 Pierrick LE GALL

	* deletion : no mail notification anymore. Feature replaced by RSS
	feed notification.

	* improvement : on waiting pictures management. Ability to
	validate all or reject all in one clic.

2005-08-21 Pierrick LE GALL

	* modification : adaptation of template variables and blocks in
	comments page to display comment by comment instead of picture by
	picture.

2005-08-20 Pierrick LE GALL

	* improvement : dedicated page for user comments validation/reject
	in administration. (screen is not shared with public part of the
	gallery). Ability to validate all or reject all in one clic.

2005-08-19 Pierrick LE GALL

	* improvement : less compact presentation of screen
	admin/element_set_unit.

2005-08-19 Pierrick LE GALL
